--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -350,7 +350,7 @@
                     <tr>
                       <td>
                         <p>Hi,</p>
-                        <p>You requested the creation of a {{ notify_kind | default('IPAM network resource') }}; Please find hereafter the result of your request.</p>
+                        <p>You requested the creation of a {{ notify_kind | default('IPAM network resource') }}; Please find hereafter the outcome of your request.</p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
 
@@ -375,8 +375,6 @@
 
                           </tbody>
                         </table>
-                        <p>This is a really simple email template. Its sole purpose is to get the recipient to click the button with no distractions.</p>
-                        <p>Good luck! Hope it works.</p>
                       </td>
                     </tr>
                   </table>
