--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -357,13 +357,32 @@
 
                             <tr>
                               <td>
-                                <h3>Dump</h3>
+                                <h3>Request details</h3>
                                 <code>
+                                {% if notify_kind | default('') == 'network' %}
                                   {{ request_view | default('') }}
                                   {{ request_container | default('') }}
                                   {{ request_network | default('') }}
                                   {{ request_plateforme | default('') }}
+                                {% else %}
+                                  {{ request_view | default('') }}
+                                  {{ request_container | default('') }}
+                                  {{ request_network | default('') }}
+                                  {{ request_plateforme | default('') }}
+                                {% endif %}
                                 </code>
+                              </td>
+                            </tr>
+
+                            <tr>
+                              <td align="left">
+                                <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+                                  <tbody>
+                                    <tr>
+                                      <td> <a href="https://awx.dt.ept.lu/#/workflow_approvals/{{ awx_workflow_job_id | default(0) }}/" target="_blank">Click here to accept the changes</a> </td>
+                                    </tr>
+                                  </tbody>
+                                </table>
                               </td>
                             </tr>
 
