--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -333,7 +333,7 @@
     </style>
   </head>
   <body class="">
-    <span class="preheader">IPAM resource {{ notify_kind }}</span>
+    <span class="preheader">IPAM resource {{ notify_kind | default('') }}</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
         <td>&nbsp;</td>
@@ -359,6 +359,12 @@
                               <td>
                                 <h3>Request details</h3>
                                 <code>
+                                {{ awx_job_id }}
+                                {{ awx_workflow_job_id }}
+                                {{ awx_workflow_job_name }}
+                                {{ awx_schedule_id }}
+                                {{ awx_schedule_name }}
+                                
                                 {% if notify_kind | default('') == 'network' %}
                                   {{ request_view | default('') }}
                                   {{ request_container | default('') }}
