--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -383,7 +383,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="https://awx.dt.ept.lu/#/workflow_approvals/{{ awx_workflow_job_id | default(0) }}/" target="_blank">Click here to accept the changes</a> </td>
+                                      <td> <a href="https://awx.dt.ept.lu/#/workflow_approvals/{{ awx_job_id | default(0) | int + 2 }}/" target="_blank">Click here to accept the changes</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
