--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>IPAM resource {{ notify_kind | default('') }}</title>
+    <title>IPAM resource {{ notify_kind }}</title>
     <style>
       /* -------------------------------------
           GLOBAL RESETS
@@ -333,7 +333,7 @@
     </style>
   </head>
   <body class="">
-    <span class="preheader">IPAM resource {{ notify_kind | default('') }}</span>
+    <span class="preheader">IPAM resource {{ notify_kind }}</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
         <td>&nbsp;</td>
@@ -350,45 +350,45 @@
                     <tr>
                       <td>
                         <p>Hi,</p>
-                        <p>You requested the {{ notify_kind | default('unknown operation') }} of a {{ notify_resource | default('IPAM network resource') }}.</p>
-                        <p>{{ notify_message | default('Please find your request outcome hereafter') }}.<p>
-                        <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
+                        <p>You requested the {{ notify_kind }} of a {{ notify_resource }}.</p>
+                        <p>{{ notify_message }}.<p>
+                        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                           <tbody>
 
                             <tr>
                               <td>
-                                <h3>Request details</h3>
                                 <code>
-                                {{ awx_job_id }}
-                                {{ awx_workflow_job_id }}
-                                {{ awx_workflow_job_name }}
+                                  {% if notify_kind | lower in ['network',] %}
+                                  {{ request_view | default('') }}
 
-                                {% if notify_kind | default('') == 'network' %}
-                                  {{ request_view | default('') }}
                                   {{ request_container | default('') }}
+
                                   {{ request_network | default('') }}
+
                                   {{ request_plateforme | default('') }}
-                                {% else %}
-                                  {{ request_view | default('') }}
-                                  {{ request_container | default('') }}
-                                  {{ request_network | default('') }}
-                                  {{ request_plateforme | default('') }}
-                                {% endif %}
+
+                                  {% else %}
+
+                                  { ... }
+
+                                  {% endif %}
                                 </code>
                               </td>
                             </tr>
 
+                            {% if notify_kind | lower in ['create', 'setup'] %}
                             <tr>
                               <td align="left">
-                                <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+                                <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="https://awx.dt.ept.lu/#/workflow_approvals/{{ awx_job_id | default(0) | int + 2 }}/" target="_blank">Click here to accept the changes</a> </td>
+                                      <td> <a href="https://awx.dt.ept.lu/#/workflow_approvals/{{ notify_job_approval_id }}/" target="_blank">Confirm</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
                               </td>
                             </tr>
+                            {% endif %}
 
                           </tbody>
                         </table>
@@ -408,7 +408,7 @@
                 <tr>
                   <td class="content-block">
                     <span class="apple-link">ICT | IPAM automation project</span>
-                    <br> Something went wrong ? Contact <a href="mailto:ict-staff@dt.ept.lu">ict-staff@dt.ept.lu</a>.
+                    <br>Something went wrong ? Contact <a href="mailto:ict-staff@dt.ept.lu">ict-staff@dt.ept.lu</a>.
                   </td>
                 </tr>
               </table>
