--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -376,7 +376,7 @@
                               </td>
                             </tr>
 
-                            {% if notify_kind | lower in ['create', 'setup'] %}
+                            {% if notify_kind | lower in ['creation', 'setup'] %}
                             <tr>
                               <td align="left">
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
