--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>IPAM resource {{ notify_kind }}</title>
+    <title>IPAM resource {{ notify_action }}</title>
     <style>
       /* -------------------------------------
           GLOBAL RESETS
@@ -333,7 +333,7 @@
     </style>
   </head>
   <body class="">
-    <span class="preheader">IPAM resource {{ notify_kind }}</span>
+    <span class="preheader">IPAM resource {{ notify_action }}</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
         <td>&nbsp;</td>
@@ -350,7 +350,7 @@
                     <tr>
                       <td>
                         <p>Hi,</p>
-                        <p>You requested the {{ notify_kind }} of a {{ notify_resource }}.</p>
+                        <p>You requested the {{ notify_action }} of a {{ notify_resource }}.</p>
                         <p>{{ notify_message }}.<p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                           <tbody>
@@ -378,7 +378,7 @@
 
                             <tr></tr>
 
-                            {% if notify_kind | lower in ['creation', 'setup'] %}
+                            {% if notify_action | lower in ['creation', 'setup'] %}
                             <tr>
                               <td align="left">
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
