--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -346,7 +346,7 @@
               <!-- START MAIN CONTENT AREA -->
               <tr>
                 <td class="wrapper">
-                  <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
+                  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
                         <p>Hi,</p>
@@ -376,7 +376,7 @@
                               </td>
                             </tr>
 
-                            <tr></tr>
+                            <tr><td></td></tr>
 
                             {% if notify_action | lower in ['creation', 'setup'] %}
                             <tr>
