--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -380,7 +380,7 @@
                             {% if notify_action | lower in ['creation', 'setup'] %}
                             <tr>
                               <td align="left">
-                                <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+                                <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                                   <tbody>
                                     <tr>
                                       <td> <a href="https://awx.dt.ept.lu/#/workflow_approvals/{{ notify_job_approval_id }}/" target="_blank">Confirm</a> </td>
