Cleanup up mail content

--- a/templates/mail_notification.html.j2
+++ b/templates/mail_notification.html.j2
@@ -351,7 +351,7 @@
                       <td>
                         <p>Hi,</p>
                         <p>You requested the {{ notify_action }} of a {{ notify_resource }}.</p>
-                        <p>{{ notify_message }}.<p>
+                        <p>{{ notify_message }}<p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                           <tbody>
 
